--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "axios": "^0.23.0",
-    "cheerio": "^1.0.0-rc.10"
+    "axios": "^0.23.0"
   }
 }
